package com.mikeescom.strategypattern;

public interface Payment {
    void pay(int amount);
}
